# fin-jepa

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  REPRODUCE.md  fin-jepa-proposal-v1.docx  fin-jepa-proposal.md  pyproject.toml  run_ssl_experiment.py  verify_paper_numbers.py
configs/study0/: ablations.yaml  benchmark.yaml  pretrain.yaml  ssl_experiment.yaml
docs/: ats169_gonogo_closing_comment.md
experiments/study0/: 00_data_exploration.ipynb  01_baseline_benchmark.ipynb  02_ft_transformer_benchmark.ipynb  02_hp_sweep.ipynb  03_ssl_pretraining.ipynb  04_ablations.ipynb  README.md  _archived_colab_ssl_experiment.ipynb  colab_ssl_experiment.ipynb
experiments/study0/notebooks_archive/: 00_setup_and_preprocessing.ipynb  01_baselines.ipynb  03_ssl_pretraining.ipynb  04_final_benchmark.ipynb  05_robustness.ipynb  06_verification.ipynb
notebooks/: explore_market_data.ipynb
paper/study0/: ERROR_LOG.md  main.tex  references.bib
paper/study0/bib/: references.bib
paper/study0/sections/: abstract.tex  data.tex  discussion.tex  (+5 more)
results/study0/: baseline_results.json  final_benchmark.json  ssl_experiment_results.json
scripts/: audit_earnings_restate.py  diff_label_versions.py  download_data.py  generate_final_benchmark.py  plot_benchmarks.py  plot_walk_forward.py  prepare_hf_dataset.py  rerun_consistency.py  run_baseline_pipeline.py  run_market_pipeline.py  run_robustness.py  run_ssl_experiment.py  source_label_data.py
src/fin_jepa/: __init__.py  cli.py
tests/: smoke_test_xbrl.py  test_baselines.py  test_data_spec_e2e.py  test_dataset.py  test_feature_engineering.py  test_ft_transformer.py  test_labels.py  test_market_data.py  test_metrics.py  test_pretrain_ssl_loop.py  test_splits.py  test_ssl_experiment.py  test_ssl_head.py  test_training_loop.py  test_universe.py  test_xbrl_pipeline.py
(+30 files in other folders)
