[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-jepa"
version = "0.1.0"
description = "Financial JEPA: Self-Supervised Representation Learning on XBRL Data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Heidi" }]

dependencies = [
    # Core ML
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    # Baselines
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    # Hyperparameter optimization
    "optuna>=3.6.0",
    # Financial data
    "yfinance>=0.2.40",
    # Config management
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # Experiment tracking
    "mlflow>=2.12.0",
    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.9.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0",
]
sec = [
    # SEC EDGAR data retrieval
    "sec-edgar-downloader>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "requests>=2.31.0",
]

[project.scripts]
fin-jepa = "fin_jepa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_jepa"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fin_jepa --cov-report=term-missing"
